exercícios de PW2

--- a/Home.html
+++ b/Home.html
@@ -13,27 +13,27 @@
 </nav>
     <div class="card-container">
     <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+  <img class="card-img-top" src="foto_1.png" alt="Imagem de capa do card">
   <div class="card-body">
-    <h5 class="card-title">Título do card</h5>
-    <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+    <h5 class="card-title">Media dos Alunos</h5>
+    <p class="card-text">calucla a édia das 3 notas de um aluno.</p>
     <a href="exercicio_01.html" class="btn btn-primary">Visitar</a>
   </div>
 </div>
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+  <img class="card-img-top" src="foto_2.jpg" alt="Imagem de capa do card">
   <div class="card-body">
-    <h5 class="card-title">Título do card</h5>
-    <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-    <a href="#" class="btn btn-primary">Visitar</a>
+    <h5 class="card-title">Temperatura</h5>
+    <p class="card-text">verifica o quanto uma temperatura é quente ou fria.</p>
+    <a href="exercicio_02.html" class="btn btn-primary">Visitar</a>
   </div>
 </div>
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+  <img class="card-img-top" src="foto_3.jpg" alt="Imagem de capa do card">
   <div class="card-body">
-    <h5 class="card-title">Título do card</h5>
-    <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-    <a href="#" class="btn btn-primary">Visitar</a>
+    <h5 class="card-title">IMC</h5>
+    <p class="card-text">Calcula o índice de masa corporal de uma pessoa</p>
+    <a href="exercicio_03.html" class="btn btn-primary">Visitar</a>
   </div>
 </div>
 </div>
