exercícios de PW2

--- a/Home.html
+++ b/Home.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <nav class="nav">
-  <a class="navbar-brand" href="#">Exercícios</a>
+  <a class="navbar-brand" href="#">Exercícios PW2</a>
 </nav>
     <div class="card-container">
     <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="foto_1.png" alt="Imagem de capa do card">
+  <img class="card-img-top" src="foto1.jpeg" alt="Imagem de capa do card">
   <div class="card-body">
     <h5 class="card-title">Media dos Alunos</h5>
     <p class="card-text">calucla a édia das 3 notas de um aluno.</p>
@@ -21,7 +21,7 @@
   </div>
 </div>
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="foto_2.jpg" alt="Imagem de capa do card">
+  <img class="card-img-top" src="foto2.jpeg" alt="Imagem de capa do card">
   <div class="card-body">
     <h5 class="card-title">Temperatura</h5>
     <p class="card-text">verifica o quanto uma temperatura é quente ou fria.</p>
@@ -29,7 +29,7 @@
   </div>
 </div>
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="foto_3.jpg" alt="Imagem de capa do card">
+  <img class="card-img-top" src="foto3.jpeg" alt="Imagem de capa do card">
   <div class="card-body">
     <h5 class="card-title">IMC</h5>
     <p class="card-text">Calcula o índice de masa corporal de uma pessoa</p>
